--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,6 +20,23 @@ jobs:
         run: npm ci
       - name: Validate code is well-formatted
         run: npm run validate
+      - name: Set environment variables
+        run: |
+          case "${GITHUB_REF}" in
+            "refs/heads/main") DEPLOY_ENV=production ;;
+            "refs/heads/develop") DEPLOY_ENV=development ;;
+            *) DEPLOY_ENV= ;;
+          esac
+          echo "DEPLOY_ENV=${DEPLOY_ENV}"
+          echo "DEPLOY_ENV=${DEPLOY_ENV}" >> $GITHUB_ENV
+      - name: Create Sentry release
+        uses: getsentry/action-release@v1
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: aswnn
+          SENTRY_PROJECT: aswnn
+        with:
+          environment: ${{ env.DEPLOY_ENV }}
       - name: Tests ✅
         if: ${{ success() }}
         run: |
