--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "config": {},
   "dependencies": {
+    "@sentry/browser": "6.2.2",
+    "@sentry/tracing": "6.2.2",
     "bootstrap": "5.0.0-beta2",
     "compression": "1.7.4",
     "polka": "next",
@@ -38,11 +40,11 @@
     "sveltestrap": "5.0.0-beta.1-4"
   },
   "devDependencies": {
-    "@babel/core": "7.13.8",
+    "@babel/core": "7.13.10",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/plugin-transform-runtime": "7.13.9",
-    "@babel/preset-env": "7.13.9",
-    "@babel/runtime": "7.13.9",
+    "@babel/plugin-transform-runtime": "7.13.10",
+    "@babel/preset-env": "7.13.10",
+    "@babel/runtime": "7.13.10",
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-commonjs": "17.1.0",
     "@rollup/plugin-node-resolve": "11.2.0",
@@ -50,18 +52,18 @@
     "@rollup/plugin-typescript": "8.2.0",
     "@rollup/plugin-url": "6.0.0",
     "@tsconfig/svelte": "^1.0.10",
-    "@types/babel__core": "7.1.12",
+    "@types/babel__core": "7.1.13",
     "@types/babel__plugin-transform-runtime": "7.9.1",
     "@types/babel__preset-env": "7.9.1",
     "@types/bootstrap": "5.0.8",
     "@types/compression": "^1.7.0",
-    "@types/eslint": "7.2.6",
-    "@types/node": "14.14.31",
+    "@types/eslint": "7.2.7",
+    "@types/node": "14.14.35",
     "@types/node-sass": "4.11.1",
     "@types/polka": "0.5.2",
     "@types/stylelint": "9.10.1",
-    "autoprefixer": "10.2.4",
-    "eslint": "7.21.0",
+    "autoprefixer": "10.2.5",
+    "eslint": "7.22.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettierx": "0.17.1",
     "eslint-plugin-svelte3": "3.1.2",
@@ -70,23 +72,23 @@
     "lint-staged": "10.5.4",
     "node-sass": "5.0.0",
     "npm-package-json-lint": "5.1.0",
-    "postcss": "8.2.7",
-    "rollup": "2.40.0",
+    "postcss": "8.2.8",
+    "rollup": "2.41.2",
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-terser": "7.0.2",
     "sapper": "0.29.1",
     "scriptlint": "2.1.2",
-    "stylelint": "13.11.0",
-    "stylelint-config-standard": "20.0.0",
+    "stylelint": "13.12.0",
+    "stylelint-config-standard": "21.0.0",
     "svelte": "3.35.0",
     "svelte-bootstrap-icons": "1.4.0",
-    "svelte-check": "1.2.1",
+    "svelte-check": "1.2.5",
     "svelte-forms": "1.1.4",
     "svelte-preprocess": "4.6.9",
     "svelte-scrollto": "0.2.0",
     "sync-dotenv": "2.6.2",
     "tslib": "2.1.0",
-    "typescript": "4.2.2"
+    "typescript": "4.2.3"
   },
   "engines": {
     "node": "14.x"
