--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aswnn",
   "version": "0.0.1",
-  "description": "ASWNN homepage",
+  "description": "The main ASWNN homepage.",
   "keywords": [
     "aswnn",
     "svelte",
@@ -13,26 +13,29 @@
   "license": "UNLICENSED",
   "author": "Brian Duffey <brian.e.duffey@gmail.com>",
   "contributors": [],
+  "main": "src/client.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/bduff9/aswnn.git"
   },
   "scripts": {
-    "dev": "sapper dev",
     "build": "sapper build --legacy",
+    "dev": "sapper dev",
     "env": "sync-dotenv",
     "export": "sapper export --legacy",
     "lint": "eslint . --quiet",
     "lint-fix": "eslint . --quiet --fix",
+    "prepare": "husky install",
     "setup": "npx typesync && meteor npm i && meteor npm prune",
     "start": "node __sapper__/build",
-    "validate:manually": "npm run lint && tsc --noEmit && npx ts-prune",
-    "validate": "svelte-check --ignore src/node_modules/@sapper"
+    "test": "echo 'No tests set up yet!'",
+    "validate": "svelte-check --ignore src/node_modules/@sapper",
+    "validate:manually": "npm run lint && tsc --noEmit && npx ts-prune"
   },
   "config": {},
   "dependencies": {
-    "@sentry/browser": "6.2.2",
-    "@sentry/tracing": "6.2.2",
+    "@sentry/browser": "6.2.5",
+    "@sentry/tracing": "6.2.5",
     "bootstrap": "5.0.0-beta2",
     "compression": "1.7.4",
     "polka": "next",
@@ -40,75 +43,66 @@
     "sveltestrap": "5.0.0-beta.1-4"
   },
   "devDependencies": {
-    "@babel/core": "7.13.10",
+    "@babel/core": "7.13.15",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/plugin-transform-runtime": "7.13.10",
-    "@babel/preset-env": "7.13.10",
+    "@babel/plugin-transform-runtime": "7.13.15",
+    "@babel/preset-env": "7.13.15",
     "@babel/runtime": "7.13.10",
     "@rollup/plugin-babel": "5.3.0",
-    "@rollup/plugin-commonjs": "17.1.0",
-    "@rollup/plugin-node-resolve": "11.2.0",
-    "@rollup/plugin-replace": "2.4.1",
-    "@rollup/plugin-typescript": "8.2.0",
+    "@rollup/plugin-commonjs": "18.0.0",
+    "@rollup/plugin-node-resolve": "11.2.1",
+    "@rollup/plugin-replace": "2.4.2",
+    "@rollup/plugin-typescript": "8.2.1",
     "@rollup/plugin-url": "6.0.0",
-    "@tsconfig/svelte": "^1.0.10",
-    "@types/babel__core": "7.1.13",
+    "@tsconfig/svelte": "1.0.10",
+    "@types/babel__core": "7.1.14",
     "@types/babel__plugin-transform-runtime": "7.9.1",
     "@types/babel__preset-env": "7.9.1",
-    "@types/bootstrap": "5.0.8",
-    "@types/compression": "^1.7.0",
-    "@types/eslint": "7.2.7",
-    "@types/node": "14.14.35",
+    "@types/bootstrap": "5.0.12",
+    "@types/compression": "1.7.0",
+    "@types/eslint": "7.2.10",
+    "@types/node": "14.14.41",
     "@types/node-sass": "4.11.1",
     "@types/polka": "0.5.2",
     "@types/stylelint": "9.10.1",
     "autoprefixer": "10.2.5",
-    "eslint": "7.22.0",
+    "eslint": "7.24.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettierx": "0.17.1",
     "eslint-plugin-svelte3": "3.1.2",
     "eslint-plugin-you-dont-need-momentjs": "1.6.0",
-    "husky": "5.1.3",
+    "husky": "6.0.0",
     "lint-staged": "10.5.4",
     "node-sass": "5.0.0",
     "npm-package-json-lint": "5.1.0",
-    "postcss": "8.2.8",
-    "rollup": "2.41.2",
+    "postcss": "8.2.10",
+    "rollup": "2.45.2",
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-terser": "7.0.2",
     "sapper": "0.29.1",
-    "scriptlint": "2.1.2",
+    "scriptlint": "2.1.3",
     "stylelint": "13.12.0",
     "stylelint-config-standard": "21.0.0",
-    "svelte": "3.35.0",
-    "svelte-bootstrap-icons": "1.4.0",
-    "svelte-check": "1.2.5",
-    "svelte-forms": "1.1.4",
-    "svelte-preprocess": "4.6.9",
+    "svelte": "3.37.0",
+    "svelte-bootstrap-icons": "1.4.1",
+    "svelte-check": "1.4.0",
+    "svelte-forms": "1.1.51",
+    "svelte-preprocess": "4.7.0",
     "svelte-scrollto": "0.2.0",
     "sync-dotenv": "2.6.2",
-    "tslib": "2.1.0",
-    "typescript": "4.2.3"
+    "tslib": "2.2.0",
+    "typescript": "4.2.4"
   },
   "engines": {
     "node": "14.x"
   },
   "private": true,
-  "husky": {
-    "hooks": {
-      "post-merge": "npm run setup",
-      "pre-commit": "lint-staged && npm run env",
-      "pre-push": "npm run test"
-    }
-  },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint --quiet --fix",
-      "git add"
+      "eslint --quiet --fix"
     ],
     "*.{md,json,css,scss}": [
-      "prettierx --write",
-      "git add"
+      "prettierx --write"
     ],
     "package.json": [
       "scriptlint --fix",
