Tried to resolve eslint but its still not working

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "env": "sync-dotenv",
     "export": "sapper export --legacy",
     "lint": "eslint . --quiet",
-    "lint-fix": "eslint . --quiet --fix",
+    "lint:fix": "eslint . --quiet --fix",
     "prepare": "husky install",
     "setup": "npx typesync && meteor npm i && meteor npm prune",
     "start": "node __sapper__/build",
@@ -65,6 +65,8 @@
     "@types/node-sass": "4.11.1",
     "@types/polka": "0.5.2",
     "@types/stylelint": "9.10.1",
+    "@typescript-eslint/eslint-plugin": "4.22.0",
+    "@typescript-eslint/parser": "4.22.0",
     "autoprefixer": "10.2.5",
     "eslint": "7.24.0",
     "eslint-plugin-import": "2.22.1",
