--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dev": "sapper dev",
     "env": "sync-dotenv",
     "export": "sapper export --legacy",
+    "license": "license-check-and-add add -f license-check-and-add-config.json",
     "lint": "eslint . --quiet",
     "lint:fix": "eslint . --quiet --fix",
     "prepare": "husky install",
@@ -74,6 +75,7 @@
     "eslint-plugin-svelte3": "3.1.2",
     "eslint-plugin-you-dont-need-momentjs": "1.6.0",
     "husky": "6.0.0",
+    "license-check-and-add": "4.0.2",
     "lint-staged": "10.5.4",
     "node-sass": "5.0.0",
     "npm-package-json-lint": "5.1.0",
