--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lint": "eslint . --quiet",
     "lint:fix": "eslint . --quiet --fix",
     "prepare": "husky install",
-    "setup": "npx typesync && meteor npm i && meteor npm prune",
+    "setup": "npx typesync && npm i && npm prune",
     "start": "node __sapper__/build",
     "test": "echo 'No tests set up yet!'",
     "validate": "svelte-check --ignore src/node_modules/@sapper",
@@ -35,67 +35,67 @@
   },
   "config": {},
   "dependencies": {
-    "@sentry/browser": "6.2.5",
-    "@sentry/tracing": "6.2.5",
-    "bootstrap": "5.0.0-beta2",
+    "@sentry/browser": "6.19.7",
+    "@sentry/tracing": "6.19.7",
+    "bootstrap": "5.1.3",
     "compression": "1.7.4",
     "polka": "next",
-    "sirv": "1.0.11",
-    "sveltestrap": "5.0.0-beta.1-4"
+    "sirv": "2.0.2",
+    "sveltestrap": "5.9.0"
   },
   "devDependencies": {
-    "@babel/core": "7.13.15",
+    "@babel/core": "7.17.10",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/plugin-transform-runtime": "7.13.15",
-    "@babel/preset-env": "7.13.15",
-    "@babel/runtime": "7.13.10",
-    "@rollup/plugin-babel": "5.3.0",
-    "@rollup/plugin-commonjs": "18.0.0",
-    "@rollup/plugin-node-resolve": "11.2.1",
-    "@rollup/plugin-replace": "2.4.2",
-    "@rollup/plugin-typescript": "8.2.1",
-    "@rollup/plugin-url": "6.0.0",
-    "@tsconfig/svelte": "1.0.10",
-    "@types/babel__core": "7.1.14",
-    "@types/babel__plugin-transform-runtime": "7.9.1",
-    "@types/babel__preset-env": "7.9.1",
-    "@types/bootstrap": "5.0.12",
-    "@types/compression": "1.7.0",
-    "@types/eslint": "7.2.10",
-    "@types/node": "14.14.41",
-    "@types/node-sass": "4.11.1",
-    "@types/polka": "0.5.2",
-    "@types/stylelint": "9.10.1",
-    "@typescript-eslint/eslint-plugin": "4.22.0",
-    "@typescript-eslint/parser": "4.22.0",
-    "autoprefixer": "10.2.5",
-    "eslint": "7.24.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-prettierx": "0.17.1",
-    "eslint-plugin-svelte3": "3.1.2",
+    "@babel/plugin-transform-runtime": "7.17.10",
+    "@babel/preset-env": "7.17.10",
+    "@babel/runtime": "7.17.9",
+    "@rollup/plugin-babel": "5.3.1",
+    "@rollup/plugin-commonjs": "21.1.0",
+    "@rollup/plugin-node-resolve": "13.3.0",
+    "@rollup/plugin-replace": "4.0.0",
+    "@rollup/plugin-typescript": "8.3.2",
+    "@rollup/plugin-url": "7.0.0",
+    "@tsconfig/svelte": "3.0.0",
+    "@types/babel__core": "7.1.19",
+    "@types/babel__plugin-transform-runtime": "7.9.2",
+    "@types/babel__preset-env": "7.9.2",
+    "@types/bootstrap": "5.1.11",
+    "@types/compression": "1.7.2",
+    "@types/eslint": "8.4.2",
+    "@types/node": "17.0.33",
+    "@types/node-sass": "4.11.2",
+    "@types/polka": "0.5.4",
+    "@types/stylelint": "14.0.0",
+    "@typescript-eslint/eslint-plugin": "5.23.0",
+    "@typescript-eslint/parser": "5.23.0",
+    "autoprefixer": "10.4.7",
+    "eslint": "8.15.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-prettierx": "0.18.0",
+    "eslint-plugin-svelte3": "4.0.0",
     "eslint-plugin-you-dont-need-momentjs": "1.6.0",
-    "husky": "6.0.0",
-    "license-check-and-add": "4.0.2",
-    "lint-staged": "10.5.4",
-    "node-sass": "5.0.0",
-    "npm-package-json-lint": "5.1.0",
-    "postcss": "8.2.10",
-    "rollup": "2.45.2",
+    "husky": "8.0.1",
+    "license-check-and-add": "4.0.5",
+    "lint-staged": "12.4.1",
+    "node-sass": "7.0.1",
+    "npm-package-json-lint": "6.3.0",
+    "postcss": "8.4.13",
+    "rollup": "2.73.0",
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-terser": "7.0.2",
-    "sapper": "0.29.1",
-    "scriptlint": "2.1.3",
-    "stylelint": "13.12.0",
-    "stylelint-config-standard": "21.0.0",
-    "svelte": "3.37.0",
-    "svelte-bootstrap-icons": "1.4.1",
-    "svelte-check": "1.4.0",
-    "svelte-forms": "1.1.51",
-    "svelte-preprocess": "4.7.0",
+    "sapper": "0.29.3",
+    "scriptlint": "2.1.10",
+    "stylelint": "14.8.2",
+    "stylelint-config-standard": "25.0.0",
+    "svelte": "3.48.0",
+    "svelte-bootstrap-icons": "1.8.2",
+    "svelte-check": "2.7.1",
+    "svelte-forms": "2.3.1",
+    "svelte-preprocess": "4.10.6",
     "svelte-scrollto": "0.2.0",
-    "sync-dotenv": "2.6.2",
-    "tslib": "2.2.0",
-    "typescript": "4.2.4"
+    "sync-dotenv": "2.7.0",
+    "tslib": "2.4.0",
+    "typescript": "4.6.4"
   },
   "engines": {
     "node": "14.x"
