--- a/package.json
+++ b/package.json
@@ -1,137 +1,33 @@
 {
-  "name": "aswnn",
-  "version": "1.0.0",
-  "description": "The main ASWNN homepage.",
-  "keywords": [
-    "aswnn",
-    "svelte",
-    "typescript",
-    "sapper",
-    "netlify"
-  ],
-  "homepage": "https://www.asitewithnoname.com/",
-  "license": "UNLICENSED",
-  "author": "Brian Duffey <brian.e.duffey@gmail.com>",
-  "contributors": [],
-  "main": "src/client.ts",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bduff9/aswnn.git"
-  },
-  "scripts": {
-    "build": "sapper build --legacy",
-    "dev": "sapper dev",
-    "env": "sync-dotenv",
-    "export": "sapper export --legacy",
-    "license": "license-check-and-add add -f license-check-and-add-config.json",
-    "lint": "eslint . --quiet",
-    "lint:fix": "eslint . --quiet --fix",
-    "prepare": "husky install",
-    "setup": "npx typesync && npm i && npm prune",
-    "start": "node __sapper__/build",
-    "test": "echo 'No tests set up yet!'",
-    "validate": "svelte-check --ignore src/node_modules/@sapper",
-    "validate:manually": "npm run lint && tsc --noEmit && npx ts-prune"
-  },
-  "config": {},
-  "dependencies": {
-    "@sentry/browser": "6.19.7",
-    "@sentry/tracing": "6.19.7",
-    "bootstrap": "5.1.3",
-    "compression": "1.7.4",
-    "polka": "next",
-    "sirv": "2.0.2",
-    "sveltestrap": "5.9.0"
-  },
-  "devDependencies": {
-    "@babel/core": "7.17.10",
-    "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/plugin-transform-runtime": "7.17.10",
-    "@babel/preset-env": "7.17.10",
-    "@babel/runtime": "7.17.9",
-    "@rollup/plugin-babel": "5.3.1",
-    "@rollup/plugin-commonjs": "21.1.0",
-    "@rollup/plugin-node-resolve": "13.3.0",
-    "@rollup/plugin-replace": "4.0.0",
-    "@rollup/plugin-typescript": "8.3.2",
-    "@rollup/plugin-url": "7.0.0",
-    "@tsconfig/svelte": "3.0.0",
-    "@types/babel__core": "7.1.19",
-    "@types/babel__plugin-transform-runtime": "7.9.2",
-    "@types/babel__preset-env": "7.9.2",
-    "@types/bootstrap": "5.1.11",
-    "@types/compression": "1.7.2",
-    "@types/eslint": "8.4.2",
-    "@types/node": "17.0.33",
-    "@types/node-sass": "4.11.2",
-    "@types/polka": "0.5.4",
-    "@types/stylelint": "14.0.0",
-    "@typescript-eslint/eslint-plugin": "5.23.0",
-    "@typescript-eslint/parser": "5.23.0",
-    "autoprefixer": "10.4.7",
-    "eslint": "8.15.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-prettierx": "0.18.0",
-    "eslint-plugin-svelte3": "4.0.0",
-    "eslint-plugin-you-dont-need-momentjs": "1.6.0",
-    "husky": "8.0.1",
-    "license-check-and-add": "4.0.5",
-    "lint-staged": "12.4.1",
-    "node-sass": "7.0.1",
-    "npm-package-json-lint": "6.3.0",
-    "postcss": "8.4.13",
-    "rollup": "2.73.0",
-    "rollup-plugin-svelte": "7.1.0",
-    "rollup-plugin-terser": "7.0.2",
-    "sapper": "0.29.3",
-    "scriptlint": "2.1.10",
-    "stylelint": "14.8.2",
-    "stylelint-config-standard": "25.0.0",
-    "svelte": "3.48.0",
-    "svelte-bootstrap-icons": "1.8.2",
-    "svelte-check": "2.7.1",
-    "svelte-forms": "2.3.1",
-    "svelte-preprocess": "4.10.6",
-    "svelte-scrollto": "0.2.0",
-    "sync-dotenv": "2.7.0",
-    "tslib": "2.4.0",
-    "typescript": "4.6.4"
-  },
-  "engines": {
-    "node": "14.x"
-  },
-  "private": true,
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --quiet --fix"
-    ],
-    "*.{md,json,css,scss}": [
-      "prettierx --write"
-    ],
-    "package.json": [
-      "scriptlint --fix",
-      "npmPkgJsonLint ."
-    ]
-  },
-  "jest": {
-    "moduleNameMapper": {},
-    "transform": {
-      "^.+\\.(ts|tsx)$": "ts-jest"
-    },
-    "testMatch": [
-      "**/__tests__/**/*.(ts|tsx)"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/jest.setup.ts"
-    ],
-    "testPathIgnorePatterns": [
-      "./.next/",
-      "./node_modules/"
-    ],
-    "globals": {
-      "ts-jest": {
-        "tsconfig": "tsconfig.jest.json"
-      }
-    }
-  }
+	"name": "sveltekit-app",
+	"private": true,
+	"version": "0.0.1",
+	"type": "module",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"prepare": "svelte-kit sync || echo ''",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "6.0.0",
+		"@sveltejs/kit": "2.20.8",
+		"@sveltejs/vite-plugin-svelte": "5.0.3",
+		"@tsconfig/svelte": "5.0.4",
+		"@types/bootstrap": "5.2.10",
+		"@types/node": "22.15.17",
+		"sass": "1.87.0",
+		"svelte": "5.28.2",
+		"svelte-check": "4.1.7",
+		"typescript": "5.8.3",
+		"vite": "6.3.5"
+	},
+	"dependencies": {
+		"@sveltestrap/sveltestrap": "7.1.0",
+		"bootstrap": "5.3.6",
+		"svelte-bootstrap-icons": "3.2.0",
+		"svelte-forms": "2.3.1"
+	}
 }
