--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "6.0.0",
+		"@sveltejs/adapter-netlify": "5.0.2",
 		"@sveltejs/kit": "2.20.8",
 		"@sveltejs/vite-plugin-svelte": "5.0.3",
 		"@tsconfig/svelte": "5.0.4",
